Signup issues fixed

--- a/templates/heart_disease_help.html
+++ b/templates/heart_disease_help.html
@@ -86,7 +86,7 @@
             </div>
             <div class="attribute-item">
                 <h3>12. Number of Major Vessels</h3>
-                <p><strong>Description:</strong> Number of major blood vessels (0–3) visible through fluoroscopy.</p>
+                <p><strong>Description:</strong> Number of major blood vessels (0-3) visible through fluoroscopy.</p>
                 <p><strong>Significance:</strong> A higher number of affected vessels indicates more severe coronary artery disease.</p>
             </div>
             <div class="attribute-item">
