--- a/templates/index.html
+++ b/templates/index.html
@@ -1071,7 +1071,6 @@
         height: 100%;
         margin: 0;
         font-family: 'Arial', sans-serif;
-        background: linear-gradient(45deg, #f0f0f0, #c0d9e9);
         background-image: url("{% static 'assets/home-page.png' %}");
         color: #333;
       }
@@ -1113,27 +1112,6 @@
           font-weight: bold;
           border-radius: 8px;
 
-      }
-
-      @media (max-width: 768px) {
-          .ai {
-              padding: 15px;
-          }
-
-          .ai .toggle-button {
-              flex: 1 1 45%;
-              margin: 5px 0;
-          }
-      }
-
-      @media (max-width: 480px) {
-          .ai {
-              padding: 10px;
-          }
-
-          .ai .toggle-button {
-              flex: 1 1 100%;
-          }
       }
 
       .form-label{
@@ -1205,7 +1183,6 @@
           color: #0e0d0d;
           text-align: center;
           border-radius: 8px;
-          /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); */
           z-index: 1000;
       }
       .alert-message {
@@ -1251,7 +1228,27 @@
         .form-label {
             font-size: 1rem;
         }
+        .ai {
+              padding: 15px;
+              margin: 10px;
+        }
+
+        .ai .toggle-button {
+              flex: 1 1 45%;
+              margin: 5px 0;
+        }
       }
+      @media (max-width: 480px) {
+        .ai {
+              padding: 10px;
+              margin: 5px;
+        }
+
+        .ai .toggle-button {
+              flex: 1 1 100%;
+        }
+      }
+
     </style>
 {% endblock %}
 {% endblock content %}
