--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,12 @@
       type="image/x-icon"
     />
 
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+    <!-- Bootstrap CSS
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEJw2XxB6S3sVTCc1D1gfwQ6wR6llF4pkzZYw6AcdtJ5s94pgbV1RrYc39zQ3" crossorigin="anonymous"> -->
 
     <!-- Bootstrap Icon library -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
       integrity="sha384-He3RckdFB2wffiHOcESa3sf4Ida+ni/fw9SSzAcfY2EPnU1zkK/sLUzw2C5Tyuhj"
@@ -33,7 +29,17 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
+    /> -->
+
+    <!-- Bootstrap CSS -->
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
+    crossorigin="anonymous"> -->
+
+    <!-- Bootstrap Bundle JS -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
+      integrity="sha384-QFje6D17z8jWlxBOa/gSJoDk3qvgc7VePTw7D8kRRD+t3CFmWS5pADW1iwEslrBV" 
+      crossorigin="anonymous"></script> -->
 
     <!-- Dynamic Title -->
     {% if title %}
@@ -118,9 +124,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/home"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about">About</a>
@@ -137,10 +141,36 @@
             <li class="nav-item">
               <a class="nav-link" href="/profile">Profile</a>
             </li>
+    
+            {% if user.is_superuser %}
+              <!-- Admin-Only Dropdown for Patient History -->
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Patient History
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li>
+                    <a class="dropdown-item" href="{% url 'heart_patient_history_view' %}">Heart Patient History</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'diabetes_patient_history_view' %}">Diabetes Patient History</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="{% url 'symptoms_prediction_history' %}">Symptoms-Based Prediction History</a>
+                  </li>
+                </ul>
+              </li>
+            {% endif %}
           </ul>
         </div>
       </div>
     </nav>
+    
+    <!-- Include Bootstrap 5 CSS and JS files -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+       
 
     <!-- Main Content Area (Content will be injected here) -->
     {% block content %} {% endblock content %}
@@ -159,6 +189,9 @@
     ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0F6S3t02Bv7PYjH6Ltr84gOhFcS3yl1bqS9ztm/OfT7V6U2A" crossorigin="anonymous"></script> -->
 
     <!-- Block for additional JavaScript -->
     {% block extra_js %}
