--- a/templates/predict_diabetes.html
+++ b/templates/predict_diabetes.html
@@ -61,7 +61,7 @@
         {% if result %}
         <div class="results">
             <h2>Prediction Results</h2>
-            <p><strong>Input Data:</strong> {{ input_data }}</p>
+            <!-- <p><strong>Input Data:</strong> {{ input_data }}</p> -->
             <p><strong>Prediction:</strong> {{ result }}</p>
         </div>
         {% endif %}
