--- a/templates/symptoms_prediction_history.html
+++ b/templates/symptoms_prediction_history.html
@@ -30,7 +30,7 @@
                         <td>{{ history.first_name }}</td>
                         <td>{{ history.last_name }}</td>
                         <td>{{ history.email }}</td>
-                        <td>{{ history.prediction_result }}</td>
+                        <td>{{ history.predicted_disease }}</td>
                         <td>{{ history.symptoms }}</td>
                         <td>{{ history.created_at }}</td>
                     </tr>
