Defined range for parameters

--- a/templates/explore_more.html
+++ b/templates/explore_more.html
@@ -46,13 +46,11 @@
   <h3>Symptom-Based Disease Prediction</h3>
   <p>In addition to heart disease and diabetes predictions, MedifAI offers a symptom-based prediction system. This model is capable of analyzing symptoms provided by the user and predicting the most likely diseases. For accurate predictions, users can select up to six symptoms, with at least three required to proceed.</p>
 
-  <p>The system employs a voting classifier that combines predictions from five machine learning models, ensuring robust and reliable results. The models used are:</p>
+  <p>The system employs a voting classifier that combines predictions from three machine learning models, ensuring robust and reliable results. The models used are:</p>
   <ul>
     <li><b>Support Vector Classifier (SVC):</b> A powerful model for classification tasks.</li>
     <li><b>Random Forest:</b> An ensemble method that operates by building multiple decision trees.</li>
-    <li><b>Gradient Boosting:</b> A machine learning technique that builds models in a sequential manner.</li>
     <li><b>K-Nearest Neighbors (KNN):</b> A model that classifies symptoms based on proximity to others.</li>
-    <li><b>Multinomial Naive Bayes:</b> A probabilistic model used for classification of symptoms.</li>
   </ul>
 
   <p>Once the symptoms are entered, our system will analyze them and provide detailed information on:</p>
